@@ -83,10 +83,10 @@ namespace {
     // add an equivalence
     void add(size_t a, size_t b) {
       if (size() == 0 || (back().label != a || back().equiv != b)) {
-	      if (a < b)
-	        push_back(equivalence(a, b));
-	      else
-	        push_back(equivalence(b, a));
+        if (a < b)
+          push_back(equivalence(a, b));
+        else
+          push_back(equivalence(b, a));
       }
     }
   };
@@ -112,69 +112,69 @@ namespace Gamera {
     size_t i0 = 0;
     for (row = image.upperLeft(); row.y != lr.y; ++row.y, ++i0) {
       for (col = row; col.x != lr.x; ++col.x) {
-	/*
-	  If this image has been labeled once already, it is necessary to start
-	  with all the pixels labeled with 1.
-	*/
-	if (acc(col) > 0)
-	  acc.set(1, col);
-	if (acc(col) > 0) {
-	  W = NW = N = NE = 0;
-	  if (col.y != ul.y) {
-	    above = col;
-	    --above.y;
-	    N = acc(above);
-	    if (col.x != ul.x) {
-	      --above.x;
-	      NW = acc(above);
-	      ++above.x;
-	    }
-	    ++above.x;
-	    if (above.x != lr.x)
-	      NE = acc(above);
-	  }
-	  if (col.x != ul.x)
-	    W = acc(col - Diff2D(1, 0));
-				
-	  if (W  == 0) W  = max_value;
-	  if (NW == 0) NW = max_value;
-	  if (N  == 0) N  = max_value;
-	  if (NE == 0) NE = max_value;
-	  typename T::value_type smallest_label = max_value;
-				
-	  if (smallest_label > W ) smallest_label = W;
-	  if (smallest_label > NW) smallest_label = NW;
-	  if (smallest_label > N ) smallest_label = N;
-	  if (smallest_label > NE) smallest_label = NE;
-				
-	  if (smallest_label == max_value) { // new object found!
-	    acc.set(curr_label, col);
-	    if (curr_label == max_value) {
-	      throw std::range_error("Max label exceeded - change OneBitPixel type in pixel.hpp");
-	    }
-	    curr_label++;
-	  } else {
-	    acc.set(smallest_label, col);
-					
-	    // adjust equiv_table if necessary
-	    if (W  == max_value) W  = 0;
-	    if (NW == max_value) NW = 0;
-	    if (N  == max_value) N  = 0;
-	    if (NE == max_value) NE = 0;
-					
-	    if (W && W != smallest_label)
-	      eq.add(smallest_label, W);
-	    if (NW && NW != smallest_label)
-	      eq.add(smallest_label, NW);
-	    if (N && N != smallest_label)
-	      eq.add(smallest_label, N);
-	    if (NE && NE != smallest_label)
-	      eq.add(smallest_label, NE);
-	  }
-	}
+        /*
+          If this image has been labeled once already, it is necessary to start
+          with all the pixels labeled with 1.
+        */
+        if (acc(col) > 0)
+          acc.set(1, col);
+        if (acc(col) > 0) {
+          W = NW = N = NE = 0;
+          if (col.y != ul.y) {
+            above = col;
+            --above.y;
+            N = acc(above);
+            if (col.x != ul.x) {
+              --above.x;
+              NW = acc(above);
+              ++above.x;
+            }
+            ++above.x;
+            if (above.x != lr.x)
+              NE = acc(above);
+          }
+          if (col.x != ul.x)
+            W = acc(col - Diff2D(1, 0));
+        
+          if (W  == 0) W  = max_value;
+          if (NW == 0) NW = max_value;
+          if (N  == 0) N  = max_value;
+          if (NE == 0) NE = max_value;
+          typename T::value_type smallest_label = max_value;
+        
+          if (smallest_label > W ) smallest_label = W;
+          if (smallest_label > NW) smallest_label = NW;
+          if (smallest_label > N ) smallest_label = N;
+          if (smallest_label > NE) smallest_label = NE;
+        
+          if (smallest_label == max_value) { // new object found!
+            acc.set(curr_label, col);
+            if (curr_label == max_value) {
+              throw std::range_error("Max label exceeded - change OneBitPixel type in pixel.hpp");
+            }
+            curr_label++;
+          } else {
+            acc.set(smallest_label, col);
+          
+            // adjust equiv_table if necessary
+            if (W  == max_value) W  = 0;
+            if (NW == max_value) NW = 0;
+            if (N  == max_value) N  = 0;
+            if (NE == max_value) NE = 0;
+          
+            if (W && W != smallest_label)
+              eq.add(smallest_label, W);
+            if (NW && NW != smallest_label)
+              eq.add(smallest_label, NW);
+            if (N && N != smallest_label)
+              eq.add(smallest_label, N);
+            if (NE && NE != smallest_label)
+              eq.add(smallest_label, NE);
+          }
+        }
       }
       // if ((i0 % 20) == 0)
-	// progress_bar.step();
+      // progress_bar.step();
     }
   
     /*
@@ -185,25 +185,25 @@ namespace Gamera {
     std::vector<size_t> labels(curr_label);
     for (size_t i = 0; i < labels.size(); i++)
       labels[i] = i;
-	
+  
     // sort by label
     std::sort(eq.begin(), eq.end());
-	
+  
     // resolve the equivalences
 
     for (size_t i = 1; i < eq.size(); i++) {
       size_t x = eq[i].label;
       size_t y = eq[i].equiv;
-		
+    
       if (labels[y] > labels[x]) {
         if (labels[y] != y)
           labels[labels[y]] = labels[x];
         labels[y] = labels[x];
       } else if (labels[y] < labels[x]) {
-          if (labels[labels[y]] < labels[x])
-            labels[x] = labels[labels[y]];
-          else
-            labels[x] = labels[y];
+        if (labels[labels[y]] < labels[x])
+          labels[x] = labels[labels[y]];
+        else
+          labels[x] = labels[y];
       }
     }
     bool swapped = true;
@@ -212,7 +212,7 @@ namespace Gamera {
       for (size_t i = 0; i < eq.size(); i++) {
         size_t x = eq[i].label;
         size_t y = eq[i].equiv;
-			
+      
         if (labels[x] != labels[y]) {
           swapped = true;
           if (labels[x] < labels[y])
@@ -222,11 +222,11 @@ namespace Gamera {
         }
       }
     }
-	
+  
     for (size_t i = 0; i < labels.size(); i++)
       if(labels[labels[i]] < labels[i])
         labels[i] = labels[labels[i]];
-	
+  
     /*
       Second Pass - relabel with equivalences and get bounding boxes
       This used to use a map, but I think that it is worth the memory
@@ -261,8 +261,8 @@ namespace Gamera {
             }
           }
         }
-	// if ((i % 20) == 0)
-	// progress_bar.step();
+        // if ((i % 20) == 0)
+        // progress_bar.step();
       }
 
       // create ConnectedComponents
@@ -271,14 +271,14 @@ namespace Gamera {
         for (size_t i = 0; i < rects.size(); ++i) {
           if (rects[i] != 0) {
             ccs->push_back(new ConnectedComponent<typename T::data_type>(*((typename T::data_type*)image.data()),
-            OneBitPixel(i),
-              Point(rects[i]->offset_x() + image.offset_x(),
-                rects[i]->offset_y() + image.offset_y()),
-                rects[i]->dim()));
+                                                                         OneBitPixel(i),
+                                                                         Point(rects[i]->offset_x() + image.offset_x(),
+                                                                               rects[i]->offset_y() + image.offset_y()),
+                                                                         rects[i]->dim()));
             delete rects[i];
           }
         }
-	    } catch (std::exception e) {
+      } catch (std::exception e) {
         for (ImageList::iterator i = ccs->begin(); i != ccs->end(); ++i)
           delete *i;
         delete ccs;
@@ -309,114 +309,114 @@ namespace Gamera {
     void filter_wide(T& ccs, size_t max_width) {
       typename T::iterator i;
       for (i = ccs.begin(); i != ccs.end();) {
-	if ((*i)->ncols() > max_width) {
-	  std::fill((*i)->vec_begin(), (*i)->vec_end(), 0);
-	  delete *i;
-	  ccs.erase(i++);
-	} else {
-	  ++i;
-	}
+        if ((*i)->ncols() > max_width) {
+          std::fill((*i)->vec_begin(), (*i)->vec_end(), 0);
+          delete *i;
+          ccs.erase(i++);
+        } else {
+          ++i;
+        }
       }
     }
-	
+  
     template<class T>
     void filter_narrow(T& ccs, size_t min_width) {
       typename T::iterator i;
       for (i = ccs.begin(); i != ccs.end();) {
-	if ((*i)->ncols() < min_width) {
-	  std::fill((*i)->vec_begin(), (*i)->vec_end(), 0);
-	  delete *i;
-	  ccs.erase(i++);
-	} else {
-	  ++i;
-	}
-      }	
+        if ((*i)->ncols() < min_width) {
+          std::fill((*i)->vec_begin(), (*i)->vec_end(), 0);
+          delete *i;
+          ccs.erase(i++);
+        } else {
+          ++i;
+        }
+      } 
     }
 
     template<class T>
     void filter_tall(T& ccs, size_t max_height) {
       typename T::iterator i;
       for (i = ccs.begin(); i != ccs.end();) {
-	if ((*i)->nrows() > max_height) {
-	  std::fill((*i)->vec_begin(), (*i)->vec_end(), 0);
-	  delete *i;
-	  ccs.erase(i++);
-	} else {
-	  ++i;
-	}
-      }	
+        if ((*i)->nrows() > max_height) {
+          std::fill((*i)->vec_begin(), (*i)->vec_end(), 0);
+          delete *i;
+          ccs.erase(i++);
+        } else {
+          ++i;
+        }
+      } 
     }
-	
+  
     template<class T>
     void filter_short(T& ccs, size_t min_height) {
       typename T::iterator i;
       for (i = ccs.begin(); i != ccs.end();) {
-	if ((*i)->nrows() < min_height) {
-	  std::fill((*i)->vec_begin(), (*i)->vec_end(), 0);
-	  delete *i;
-	  ccs.erase(i++);
-	} else {
-	  ++i;
-	}
-      }	
+        if ((*i)->nrows() < min_height) {
+          std::fill((*i)->vec_begin(), (*i)->vec_end(), 0);
+          delete *i;
+          ccs.erase(i++);
+        } else {
+          ++i;
+        }
+      } 
     }
-	
+  
     template<class T>
     void filter_large(T& ccs, size_t max_size) {
       typename T::iterator i;
       for (i = ccs.begin(); i != ccs.end();) {
-	if ((*i)->nrows() > max_size && (*i)->ncols() > max_size) {
-	  std::fill((*i)->vec_begin(), (*i)->vec_end(), 0);
-	  delete *i;
-	  ccs.erase(i++);
-	} else {
-	  ++i;
-	}
-      }	
+        if ((*i)->nrows() > max_size && (*i)->ncols() > max_size) {
+          std::fill((*i)->vec_begin(), (*i)->vec_end(), 0);
+          delete *i;
+          ccs.erase(i++);
+        } else {
+          ++i;
+        }
+      } 
     }
 
     template<class T>
     void filter_small(T& ccs, size_t min_size) {
       typename T::iterator i;
       for (i = ccs.begin(); i != ccs.end();) {
-	if ((*i)->nrows() < min_size && (*i)->ncols() < min_size) {
-	  std::fill((*i)->vec_begin(), (*i)->vec_end(), 0);
-	  delete *i;
-	  ccs.erase(i++);
-	} else {
-	  ++i;
-	}
-      }	
+        if ((*i)->nrows() < min_size && (*i)->ncols() < min_size) {
+          std::fill((*i)->vec_begin(), (*i)->vec_end(), 0);
+          delete *i;
+          ccs.erase(i++);
+        } else {
+          ++i;
+        }
+      } 
     }
 
     template<class T>
     void filter_black_area_large(T& ccs, int max_area) {
       typename T::iterator i;
       for (i = ccs.begin(); i != ccs.end();) {
-	int bai = (int)black_area(**i);
-	if (bai > max_area) {
-	  std::fill((*i)->vec_begin(), (*i)->vec_end(), 0);
-	  delete *i;
-	  ccs.erase(i++);
-	} else {
-	  ++i;
-	}
-      }	
+        int bai = (int)black_area(**i);
+        if (bai > max_area) {
+          std::fill((*i)->vec_begin(), (*i)->vec_end(), 0);
+          delete *i;
+          ccs.erase(i++);
+        } else {
+          ++i;
+        }
+      } 
     }
 
     template<class T>
     void filter_black_area_small(T& ccs, int min_area) {
       typename T::iterator i;
       for (i = ccs.begin(); i != ccs.end();) {
-	int bai = (int)black_area(**i);
-	if (bai < min_area) {
-	  std::fill((*i)->vec_begin(), (*i)->vec_end(), 0);
-	  delete *i;
-	  ccs.erase(i++);
-	} else {
-	  ++i;
-	}
-      }	
+        int bai = (int)black_area(**i);
+        if (bai < min_area) {
+          std::fill((*i)->vec_begin(), (*i)->vec_end(), 0);
+          delete *i;
+          ccs.erase(i++);
+        } else {
+          ++i;
+        }
+      } 
     }
   }
 
@@ -431,8 +431,8 @@ namespace Gamera {
       int value = (*projections)[i];
       double score = value*value*2 + distance_from_middle*distance_from_middle;
       if (score < minimum) {
-	minimum = score;
-	minimum_index = i;
+        minimum = score;
+        minimum_index = i;
       }
     }
     if (minimum_index == 0)
@@ -453,8 +453,8 @@ namespace Gamera {
       int value = (*projections)[i];
       double score = -(value*value*2) + distance_from_middle*distance_from_middle*distance_from_middle;
       if (score < minimum) {
-	minimum = score;
-	minimum_index = i;
+        minimum = score;
+        minimum_index = i;
       }
     }
     if (minimum_index == 0)
@@ -466,9 +466,9 @@ namespace Gamera {
 
   template<class T>
   void split_error_cleanup(T* view,
-			   ImageList* splits,
-			   IntVector *projs,
-			   ImageList* ccs) {
+                           ImageList* splits,
+                           IntVector *projs,
+                           ImageList* ccs) {
     delete view->data();
     delete view;
     for (ImageList::iterator i = splits->begin(); i != splits->end(); ++i) 
@@ -478,7 +478,7 @@ namespace Gamera {
       delete projs;
     if (ccs != NULL) {
       for (ImageList::iterator i = ccs->begin(); i != ccs->end(); ++i) 
-	delete (*i);
+        delete (*i);
       delete ccs;
     }
   }
@@ -504,13 +504,13 @@ namespace Gamera {
       if (new_split <= last_split)
         continue;
       view = simple_image_copy(T(image, 
-				 Point(image.ul_x() + last_split, image.ul_y()), 
-				 Dim(new_split - last_split, image.nrows())));
+                                 Point(image.ul_x() + last_split, image.ul_y()), 
+                                 Dim(new_split - last_split, image.nrows())));
       last_split = new_split;
       try {
         ccs = cc_analysis(*view);
       } catch (std::range_error x) {
-	split_error_cleanup(view, splits, projs, ccs);
+        split_error_cleanup(view, splits, projs, ccs);
         throw x;
       }
       for (ccs_it = ccs->begin(); ccs_it != ccs->end(); ++ccs_it)
@@ -520,8 +520,8 @@ namespace Gamera {
     }
     delete projs;
     view = simple_image_copy(T(image, 
-			       Point(image.ul_x() + last_split, image.ul_y()),
-			       Dim(image.ncols() - last_split, image.nrows())));
+                               Point(image.ul_x() + last_split, image.ul_y()),
+                               Dim(image.ncols() - last_split, image.nrows())));
     try {
       ccs = cc_analysis(*view);
     } catch (std::range_error x) {
@@ -556,13 +556,13 @@ namespace Gamera {
       if (new_split <= last_split)
         continue;
       view = simple_image_copy(T(image, 
-				 Point(image.ul_x()+last_split, image.ul_y()),
-				 Dim(new_split - last_split, image.nrows())));
+                                 Point(image.ul_x()+last_split, image.ul_y()),
+                                 Dim(new_split - last_split, image.nrows())));
       last_split = new_split;
       try {
         ccs = cc_analysis(*view);
       } catch (std::range_error x) {
-	split_error_cleanup(view, splits, projs, ccs);
+        split_error_cleanup(view, splits, projs, ccs);
         throw x;
       }
       for (ccs_it = ccs->begin(); ccs_it != ccs->end(); ++ccs_it)
@@ -572,8 +572,8 @@ namespace Gamera {
     }
     delete projs;
     view = simple_image_copy(T(image, 
-			       Point(image.ul_x() + last_split, image.ul_y()),
-			       Dim(image.ncols() - last_split, image.nrows())));
+                               Point(image.ul_x() + last_split, image.ul_y()),
+                               Dim(image.ncols() - last_split, image.nrows())));
     try { 
       ccs = cc_analysis(*view);
     } catch (std::range_error x) {
@@ -608,13 +608,13 @@ namespace Gamera {
       if (new_split <= last_split)
         continue;
       view = simple_image_copy(T(image, 
-				 Point(image.ul_x(), image.ul_y()+last_split), 
+                                 Point(image.ul_x(), image.ul_y()+last_split), 
                                  Dim(image.ncols(), new_split - last_split)));
       last_split = new_split;
       try {
         ccs = cc_analysis(*view);
       } catch (std::range_error x) {
-	split_error_cleanup(view, splits, projs, ccs);
+        split_error_cleanup(view, splits, projs, ccs);
         throw x;
       }
       for (ccs_it = ccs->begin(); ccs_it != ccs->end(); ++ccs_it)
@@ -624,7 +624,7 @@ namespace Gamera {
     }
     delete projs;
     view = simple_image_copy(T(image, 
-			       Point(image.ul_x(), image.ul_y() + last_split),
+                               Point(image.ul_x(), image.ul_y() + last_split),
                                Dim(image.ncols(), image.nrows() - last_split)));
     try {
       ccs = cc_analysis(*view);
